Bug 706718: Don't prepend text extracted lines if vertically shifted.

The bugfix for 706426 was incorrect, in that it did not check for
text extracted lines being vertically shifted when considering them
for prepending.

Fixed here.